src/test/deca/context/valid/custom/operation-unaire/not-true.deca
// Description:
//   Opposite of a boolean.
// Results:
//    Line 11: display false on the standard output.
//
// History:
//    created on 07/01/2022

{
   bool x = true;
   print(!x);
}
